--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2371,7 +2371,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif;
+  font-family: sans serif;
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -5748,17 +5748,19 @@ body.keyboard-focused .dropdown-content li:focus {
 
 .modal {
   display: none;
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   background-color: #fafafa;
   padding: 0;
-  max-height: 70%;
-  width: 55%;
-  margin: auto;
+  max-height: 80%;
+  height: relative;
+  width: 900px;
+  margin: 150px auto;
   overflow-y: auto;
   border-radius: 2px;
   will-change: top, opacity;
+  top:80px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -5772,7 +5774,8 @@ body.keyboard-focused .dropdown-content li:focus {
 }
 
 .modal .modal-content {
-  padding: 24px;
+  overflow-y:hidden;
+  padding: 2px;
 }
 
 .modal .modal-close {
@@ -5795,11 +5798,11 @@ body.keyboard-focused .dropdown-content li:focus {
 .modal-overlay {
   position: fixed;
   z-index: 999;
-  top: -25%;
+  top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  height: 125%;
+  height: 100%;
   width: 100%;
   background: #000;
   display: none;
@@ -5808,12 +5811,14 @@ body.keyboard-focused .dropdown-content li:focus {
 
 .modal.modal-fixed-footer {
   padding: 0;
-  height: 70%;
+  position:fixed;
+  margin:40px auto;
+  height: 90%;
 }
 
 .modal.modal-fixed-footer .modal-content {
-  position: absolute;
-  height: calc(100% - 56px);
+  position: relative;
+  height: 100%;
   max-height: 100%;
   width: 100%;
   overflow-y: auto;
@@ -7568,7 +7573,7 @@ input[type=range]::-ms-thumb {
   color: rgba(0, 0, 0, 0.87);
   display: block;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 200;
   height: 48px;
   line-height: 48px;
   padding: 0 32px;
@@ -8346,14 +8351,14 @@ input[type=range]::-ms-thumb {
 }
 
 .slider .indicators .indicator-item.active {
-  background-color: #4CAF50;
+  background-color: #455a64;
 }
 
 .carousel {
   overflow: hidden;
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 400px;
+  height: 900px;
   -webkit-perspective: 500px;
           perspective: 500px;
   -webkit-transform-style: preserve-3d;
@@ -8372,7 +8377,7 @@ input[type=range]::-ms-thumb {
   left: 0;
   right: 0;
   bottom: 20px;
-  z-index: 1;
+  z-index: 900;
 }
 
 .carousel.carousel-slider .carousel-fixed-item.with-indicators {
@@ -8381,7 +8386,7 @@ input[type=range]::-ms-thumb {
 
 .carousel.carousel-slider .carousel-item {
   width: 100%;
-  height: 100%;
+  height: 200px;
   min-height: 400px;
   position: absolute;
   top: 0;
@@ -8414,6 +8419,7 @@ input[type=range]::-ms-thumb {
 .carousel .indicators {
   position: absolute;
   text-align: center;
+  margin-top:0px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -8424,17 +8430,20 @@ input[type=range]::-ms-thumb {
   display: inline-block;
   position: relative;
   cursor: pointer;
-  height: 8px;
-  width: 8px;
+  height: 17px;
+  width: 17px;
   margin: 24px 4px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #000;
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
   border-radius: 50%;
 }
 
 .carousel .indicators .indicator-item.active {
-  background-color: #fff;
+  background-color: #37474f;
+}
+.carousel .indicators .indicator-item:hover {
+  background-color: #37474f;
 }
 
 .carousel.scrolling .carousel-item .materialboxed,
@@ -8477,10 +8486,19 @@ input[type=range]::-ms-thumb {
   visibility: visible;
   -webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
           animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
-  -webkit-transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
 }
 
 .tap-target {
@@ -8533,10 +8551,19 @@ input[type=range]::-ms-thumb {
 
 .tap-target-wave::after {
   visibility: hidden;
-  -webkit-transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s;
-  transition: opacity .3s, transform .3s, visibility 0s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s,
+ -webkit-transform .3s;
   z-index: -1;
 }
 
