--- a/css/style.css
+++ b/css/style.css
@@ -1,262 +1,295 @@
 /* Custom Stylesheet */
+
 /**
  * Use this file to override Materialize files so you can update
  * the core Materialize files in the future
  *
  */
+
 nav .brand-logo {
-  font-weight:200;
-  font-family:'Kaushan Script',cursive;
-  padding:5px 0 0 0;
-  font-size:35px;
+  font-weight: 200;
+  font-family: 'Kaushan Script', cursive;
+  padding: 5px 0 0 0;
+  font-size: 35px;
   color: #000;
-}
-h3 {
-  text-shadow:0px 8px 10px black;
-  font-size:70px;
-  line-height:60px;
-  font-weight:330;
-}
-nav ul li{
-  padding:40px auto;
 }
 
-nav ul a{
-  font-weight:200;
-  font-size:21px;
+h3 {
+  text-shadow: 0px 8px 10px black;
+  font-size: 70px;
+  line-height: 60px;
+  font-weight: 330;
+}
+
+nav ul li {
+  padding: 40px auto;
+}
+
+nav ul a {
+  font-weight: 200;
+  font-size: 21px;
   padding-top: 1px;
-  padding-bottom:1px;
+  padding-bottom: 1px;
   color: #000;
-}  
+}
 
 nav {
-  position:fixed; 
-  margin:0;
-  top:0; 
-  height:65px;
-  z-index:9000;
+  position: fixed;
+  margin: 0;
+  top: 0;
+  height: 65px;
+  z-index: 9000;
   background-color: #FFF;
 }
-.sidenav{
-  padding-top:65px;
+
+.sidenav {
+  padding-top: 65px;
 }
-.sidenav li a{
-  font-size:17px;
-  font-weight:0px;
+
+.sidenav li a {
+  font-size: 17px;
+  font-weight: 0px;
 }
-.sidenav li div a{
-  float:center;
-  padding:0 0px 0px 30%;
+
+.sidenav li div a {
+  float: center;
+  padding: 0 0px 0px 30%;
 }
-.sidenav li div span a{
-  float:left;
-  margin-left:49px;
-  padding:15px 15px 16px 15px;
+
+.sidenav li div span a {
+  float: left;
+  margin-left: 49px;
+  padding: 15px 15px 16px 15px;
 }
+
 #dropdownthis123 {
-  -webkit-box-shadow: inset 0px 0px 0.8px #000,  inset 0 0px 0px #000,inset 0px 0px 0px #000, inset 0 0px 0px #000;
-  visibility:hidden;
-  height:0px;
-  overflow:hidden;
+  -webkit-box-shadow: inset 0px 0px 0.8px #000, inset 0 0px 0px #000, inset 0px 0px 0px #000, inset 0 0px 0px #000;
+  visibility: hidden;
+  height: 0px;
+  overflow: hidden;
 }
 
 p {
-  text-shadow:0px 8px 10px black;
-  font-size:30px;
-  font-weight:230;
-  line-height:4rem;
+  text-shadow: 0px 8px 10px black;
+  font-size: 30px;
+  font-weight: 230;
+  line-height: 4rem;
 }
 
 .sidenav-trigger {
-  padding-top:3px;
+  padding-top: 3px;
   color: #000;
 }
 
 .parallax {
-  opacity:1;
+  opacity: 1;
 }
 
 .doris-icon {
-   -webkit-box-shadow: 0 0px 10px 0.3px black;
-   border-radius:50%; 
-   background-image:url('../dorisliu.jpg');
-   background-position:center;
-   height:240px;
-   width:240px;
-   margin:150px auto 50px auto;
+  -webkit-box-shadow: 0 0px 10px 0.3px black;
+  border-radius: 50%;
+  background-image: url('../dorisliu.jpg');
+  background-position: center;
+  height: 240px;
+  width: 240px;
+  margin: 150px auto 50px auto;
 }
 
 .parallax-container {
-  margin:0 0 0px 0;
+  margin: 0 0 0px 0;
   min-height: 380px;
   line-height: 0;
   height: 700px;
-  color: rgba(255,255,255,.9);
+  color: rgba(255, 255, 255, .9);
 }
-  .parallax-container .section {
-    top:0px;
+
+.parallax-container .section {
+  top: 0px;
+  width: 100%;
+}
+
+@media only screen and (max-width: 420px) {
+  .parallax-container {
+    height: 740px;
+  }
+  #shifted {
+    padding-top: 50px;
+  }
+  .col {
+    padding: 0;
+  }
+  b {
+    font-weight: 200;
+  }
+  p {
+    line-height: 1em;
+    text-shadow: 0px 8px 10px black;
+    font-weight: 200;
+  }
+  .slider .indicators {
+    position: absolute;
+    text-align: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+  }
+  .modal.modal-fixed-footer {
+    padding: 0;
+    width: 95%;
+    height: 50%;
+  }
+}
+
+@media only screen and (min-width: 420px) {
+  .modal-overlay {
+    position: fixed;
+    z-index: 9990;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%;
     width: 100%;
+    background: #000;
+    display: none;
+    will-change: opacity;
   }
+  .modal.modal-fixed-footer {
+    padding: 0;
+    z-index: 9999;
+    margin: 30px auto;
+    width: 90%;
+    height: 95%;
+  }
+}
 
-  @media only screen and (max-width : 420px) {
-    .parallax-container { 
-       height:740px;
-    } 
-  
-    #shifted {
-      padding-top:50px;
-    }
-    .col {
-      padding:0;
-    }
-    b {
-      font-weight:200;
-    }
-    p {
-      line-height:1em;
-      text-shadow:0px 8px 10px black;
-      font-weight:200;
-    }
-    .slider .indicators {
-      position: absolute;
-      text-align: center;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-    }
-    .modal.modal-fixed-footer {
-      padding: 0;
-      width:95%;
-      height: 50%;
-    }
+@media only screen and (min-width: 500px) {
+  .modal.modal-fixed-footer {
+    padding: 0;
+    width: 95%;
+    height: 95%;
   }
-  @media only screen and (min-width : 420px) {
-    .modal-overlay {
-      position: fixed;
-      z-index: 9990;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      height: 100%;
-      width: 100%;
-      background: #000;
-      display: none;
-      will-change: opacity;
-    }
-    .modal.modal-fixed-footer {
-      padding: 0;
-      z-index:9999;
-      margin:30px auto;
-      width:90%;
-      height: 95%;
-    }
-  }
-    @media only screen and (min-width : 500px) {
-      .modal.modal-fixed-footer {
-        padding: 0;
-        width:95%;
-        height: 95%;
-      }
-    }
-    
-    @media only screen and (min-width : 800px) {
+}
 
-      .modal.modal-fixed-footer {
-        padding: 0;
-        width:80%;
-        height: 80%;
-      }
-      
-    }
-    @media only screen and (max-width : 992px) {
-      .parallax-container { 
-        top:0;
-      }
-    }
-    @media only screen and (min-width : 992px) {
-      .parallax-container { 
-        top:0;
-      } 
-    }
+@media only screen and (min-width: 800px) {
+  .modal.modal-fixed-footer {
+    padding: 0;
+    width: 80%;
+    height: 80%;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .parallax-container {
+    top: 0;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .parallax-container {
+    top: 0;
+  }
+}
 
 .myslider img {
-  position:relative;
-  margin:auto;
-  width:100%;
-  height:100%;
+  position: relative;
+  margin: auto;
+  width: 100%;
+  height: 100%;
 }
+
 /* Slideshow container */
-.myslider{
+
+.myslider {
   max-width: 1000px;
-  height:100%;
-  width:100%;
+  height: 100%;
+  width: 100%;
   margin: auto;
 }
 
 /* Hide the images by default */
-.myslider-item-1{
-  height:100%;
-  width:100%;
+
+.myslider-item-1 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-2{
-  height:100%;
-  width:100%;
+
+.myslider-item-2 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-3{
-  height:100%;
-  width:100%;
+
+.myslider-item-3 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-4{
-  height:100%;
-  width:100%;
+
+.myslider-item-4 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-5{
-  height:100%;
-  width:100%;
+
+.myslider-item-5 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-6{
-  height:100%;
-  width:100%;
+
+.myslider-item-6 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-7{
-  height:100%;
-  width:100%;
+
+.myslider-item-7 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-8{
-  height:100%;
-  width:100%;
+
+.myslider-item-8 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-9{
-  height:100%;
-  width:100%;
+
+.myslider-item-9 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
+
 /* Hide the images by default */
-.myslider-item-10{
-  height:100%;
-  width:100%;
+
+.myslider-item-10 {
+  height: 100%;
+  width: 100%;
   display: none;
 }
 
 /* nextbutton & previousbuttonious buttons */
+
 .previousbutton, .nextbutton {
   cursor: pointer;
   position: absolute;
@@ -266,7 +299,7 @@ p {
   padding: 16px;
   color: #000;
   background-color: #FFF;
-  border:2px solid #000;
+  border: 2px solid #000;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -275,18 +308,21 @@ p {
 }
 
 /* Position the "nextbutton button" to the right */
+
 .nextbutton {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
+
 .previousbutton:hover, .nextbutton:hover {
   background-color: #000;
   color: #FFF;
 }
 
 /* Fading animation */
+
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -295,14 +331,23 @@ p {
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
 }
+
 .icon-block {
   padding: 0 15px;
 }
